fix: mobile issues with dark mode and main height

--- a/static/css/global.css
+++ b/static/css/global.css
@@ -28,6 +28,23 @@ main {
   --text-color: #fff;
 }
 
+.toggle-dark {
+  position: relative;
+  display: block;
+  width: 42px;
+  height: 42px;
+  border-radius: 50%;
+  background: url("/images/sun.svg") no-repeat center, white;
+  background-size: 18px;
+  box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.08), 0 3px 6px 0 rgba(0, 0, 0, 0.08);
+  transition: all 0.5s ease-in-out;
+}
+.dark {
+  background: url("/images/moon.svg") no-repeat center, white;
+  background-size: 18px;
+  transition: all 0.5s ease-in-out;
+}
+
 h1,
 h2,
 h3,
